# summer

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  summer.yaml
.github/workflows/: ci.yml  release.yml
examples/: filetypes.yaml  git-focus.yaml
pkg/: build-release.sh
pkg/debian/: build.sh  control
pkg/rpm/: build.sh  summer.spec
pkg/system/: install-deps.sh  make-tarball.sh
src/: main.rs
src/config/: loader.rs  mimetypes.rs  mod.rs  serde_impls.rs
src/display/: grid.rs  mod.rs  strings.rs  styles.rs
src/summarizer/: analyzer.rs  diskusage.rs  exts.rs  gitdiff.rs  info.rs  matchers.rs  mod.rs  render.rs  sorting.rs  tests.rs  treereader.rs
src/tests/ui/: .gitattributes  badconfig.output  badconfig.sh  collector.output  collector.sh  info.output  info.sh  matchers.output  matchers.sh  maxwidth.output  maxwidth.sh  mod.rs  names.output  names.sh  sortopts.output  sortopts.sh  styles.output  styles.sh
